# eventstream

./: Dockerfile  LICENSE  README.md  gunicorn_conf.py  main.py  pyproject.toml
app/: config.py  main.py
app/api/: event_types.py  events.py
app/db/: mongodb.py
app/models/: event.py  event_type.py
tests/: load_test.py
